5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1649_1053.log
== SUBMITION (2019-04-09 19:17:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome=cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do harry potter"
	print(patrono+mensagem)
-- EXECUTION TIME:
0.192712
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    if(nome=cervo):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:17:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome=cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do harry potter"
	print(patrono+mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome=cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome=cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do harry potter"
	print(nome,mensagem)
-- EXECUTION TIME:
0.165279
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    if(nome=cervo):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:20:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome="cervo"):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do harry potter"
	print(nome,mensagem)
-- EXECUTION TIME:
0.124714
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    if(nome="cervo"):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:21:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome="cervo"):
	mensagem="eh patrono do Harry Potter"
	print(nome,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome,mensagem)
-- EXECUTION TIME:
0.288983
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    if(nome="cervo"):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:21:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome="cervo"):
	mensagem="eh patrono do Harry Potter"
	print(nome,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome,mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome="cervo"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:21:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("qual o nome do patrono? ")
if(nome=="cervo"):
	mensagem="eh patrono do Harry Potter"
	print(nome,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome,mensagem)
-- EXECUTION TIME:
0.183103
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
